# beeeval_data_analyze

./: .dockerignore  .env.example  .env.hybrid.example  .env.production.example  .gitignore  .vercelignore  ASR_COMPARISON.md  Dockerfile  PROJECT_DOCS.md  README.md  check_os.py  compare.md  debug_db.py  demand.md  deploy.ps1  deploy.sh  docker-compose.production.yml  docker-compose.yml  migration_plan.py  nginx.conf  package-lock.json  package.json  start-tunnel.ps1  tailwind.config.js  test_analyze.py  test_analyze_api.py  test_db_connection.py  test_definitions.txt  test_httpx.py  test_httpx_connection.py  verify_fix.py  vite.config.ts  vite.simple.config.js  指标库.json  指标库.xlsx  指标筛选标准示例.csv  指标筛选标准示例.xlsx  指标筛选标准示例_utf8.csv
CHANGELOG/: CHANGELOG.md
api/: =1.9.0  ASR_TEST_GUIDE.md  MOONSHINE_MIGRATION.md  celery_app.py  download_moonshine_model.py  funasr_result.json  main.py  pyproject.toml  requirements.txt  test_asr.py  whisper_result.json
api/core/: config.py  logger.py  ssl_patch.py  video_name_parser.py
api/data/: metrics_registry.json
api/routers/: aggregation.py  chat.py  dr_bee.py  nas.py  rag.py  system.py  translation.py  video.py
api/scripts/: check_tables.py  migrate_sqlite_to_pg.py
api/services/: embed_service.py  llm_service.py  local_db_client.py  metric_service.py  nas_service.py  rag_service.py  redis_service.py  smart_frame_detector.py  supabase_client.py  translation_service.py  video_cache_service.py  video_service.py
api/tasks/: video_tasks.py
docs/: architecture-optimization-log.md  backend-optimization.md  deployment-guide.md  (+5 more)
(+40 files in other folders)
