[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beeeval-api"
version = "0.1.0"
description = "BeeEVAL API"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "supabase==2.3.4",
    "python-dotenv==1.0.1",
    "openai==1.12.0",
    "ffmpeg-python==0.2.0",
    "moviepy==1.0.3",
    "moonshine-voice>=0.2.0",
    "python-multipart==0.0.9",
    "httpx==0.25.2",
    "pydantic==2.6.1",
    "loguru==0.7.2",
    "setuptools>=65.0.0",
    "wheel"
]
